# smart_server

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
custom/: digitalscroller.cpp  digitalscroller.h  digitalscroller.ui  global.cpp  global.h  sliderbutton.cpp  sliderbutton.h
device/: deviceac.cpp  deviceac.h  deviceac.ui  devicecurtain.cpp  devicecurtain.h  devicecurtain.ui  devicefan.cpp  devicefan.h  devicefan.ui  devicelamp.cpp  devicelamp.h  devicelamp.ui
tcp/: tcpserver.cpp  tcpserver.h  tcpserverthread.cpp  tcpserverthread.h  tcpsocket.cpp  tcpsocket.h
